# DataAnalysis

./: CMakeLists.txt  Readme.md  data.csv
include/: data_analyzer.hpp  data_parser.hpp
src/: data_analyzer.cpp  data_parser.cpp  main.cpp
test/: test_data_analyzer.cpp  test_data_parser.cpp
